Modification du fichier html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head></head>
-    <body></body>
+    <head>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <img src="C:\Users\edith.lalande\OneDrive - ESTIA\Bureau\CV\photo-chat.jpg">
+    </body>
     
