--- a/index.html
+++ b/index.html
@@ -6,4 +6,8 @@
     <body>
         <img src="C:\Users\edith.lalande\OneDrive - ESTIA\Bureau\CV\photo-chat.jpg">
     </body>
-    
+    <ul>
+        <li>Nom</li>
+        <li>Prénom</li>
+        <li>Date de naissance</li>
+    </ul>
