modification de la taille de l'image et création d'un fichier css

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="style.css"
     </head>
     <body>
-        <img src="C:\Users\edith.lalande\OneDrive - ESTIA\Bureau\CV\photo-chat.jpg">
+        <img src="photo-chat.jpg" alt="photo de chat" width="200">
     </body>
     <ul>
         <li>Nom</li>
