--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="style.css"
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <img src="photo-chat.jpg" alt="photo de chat" width="200">
@@ -11,4 +11,5 @@
         <li>Nom</li>
         <li>Prénom</li>
         <li>Date de naissance</li>
+        <li>Numéro de téléphone</li>
     </ul>
